<resources>
    <string name="app_name">iBeacon Technician</string>
    <string name="authent">Authentification</string>
    <string name="fail">L\'authentification a échoué. Vous n\'avez peut-être pas les droits nécessaires.</string>
    <string name="retry">Réessayer</string>
    <string name="welcome">Afin d\'accéder à l\'application, veuillez présenter votre carte Izly au dos du téléphone pour vous authentifier.</string>
    <string name="nb">NB : Penser à activer le NFC.</string>
    <string name="zone">Bâtiment</string>
    <string name="room">Salle</string>
    <string name="id">UUID</string>
    <string name="major">Major</string>
    <string name="minor">Minor</string>
    <string name="view">Afficher le parcours</string>
</resources>
