<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_beacon"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.iut.lr.ibeaconreader.BeaconActivity">

    <TextView
        android:text="Localisation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/beaconTitle"
        android:textSize="30sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textStyle="normal|bold" />

    <TextView
        android:text="@string/zone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="63dp"
        android:id="@+id/zoneLabel"
        android:textSize="24sp"
        android:layout_below="@+id/beaconTitle"
        android:layout_alignParentStart="true"
        android:layout_marginStart="22dp"
        android:textStyle="normal|italic" />

    <TextView
        android:id="@+id/roomValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/roomLabel"
        android:layout_alignBottom="@+id/roomLabel"
        android:layout_alignStart="@+id/zoneValue"
        android:text="val"
        android:textAlignment="viewStart"
        android:textSize="24sp" />

    <TextView
        android:text="@string/room"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:id="@+id/roomLabel"
        android:textSize="24sp"
        android:textStyle="normal|italic"
        android:layout_below="@+id/zoneLabel"
        android:layout_alignEnd="@+id/zoneLabel" />

    <TextView
        android:id="@+id/zoneValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="val"
        android:textAlignment="textEnd"
        android:textSize="24sp"
        android:layout_alignBaseline="@+id/zoneLabel"
        android:layout_alignBottom="@+id/zoneLabel"
        android:layout_toEndOf="@+id/zoneLabel"
        android:layout_marginStart="26dp" />

    <Button
        android:text="@string/view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/idLabel"
        android:layout_marginTop="73dp"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        android:layout_below="@+id/roomLabel"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:id="@+id/idValue"
        android:layout_below="@+id/idLabel"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/majorLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/idValue"
        android:layout_marginTop="27dp"
        android:text="@string/major"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/minorLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/majorLabel"
        android:layout_marginTop="20dp"
        android:text="@string/minor"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/majorValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/beaconTitle"
        android:layout_alignTop="@+id/majorLabel"
        android:text="val" />

    <TextView
        android:id="@+id/minorValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/majorValue"
        android:layout_alignTop="@+id/minorLabel"
        android:text="val" />
</RelativeLayout>
